--- a/assets/styles/sass/main.scss
+++ b/assets/styles/sass/main.scss
@@ -1,7 +1,16 @@
 @import "./variables";
+@import "./header";
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+.flex {
+    display: flex;
+}
+
+a {
+    text-decoration: none;
 }
