:sparkles: Feat: home section
add home section

--- a/assets/styles/sass/_variables.scss
+++ b/assets/styles/sass/_variables.scss
@@ -1,6 +1,6 @@
 $highlightColor: #fa4a0c;
 $textColor: #000;
-$ctaColor: #fff;
+$imageTextColor: #fff;
 $bgColor: #fff;
 
 $titleFont: "Poppins", sans-serif;
