--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -5,16 +5,51 @@
   width: 88%;
   font-family: "Montserrat", sans-serif;
   font-weight: bolder;
-  font-size: 1.5rem; }
+  font-size: 1rem; }
   .c-header__logo {
-    height: 155px; }
+    height: 100px; }
   .c-header__menu-itens {
-    gap: 7rem;
+    gap: 4.5rem;
     list-style: none; }
     .c-header__menu-itens li a {
       color: #000; }
       .c-header__menu-itens li a:hover {
         color: #fa4a0c; }
+
+.c-main__home {
+  background: url("../../images/banner.png") center center no-repeat;
+  background-size: cover;
+  min-height: calc(100vh - 100px);
+  color: #fff;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-family: "Poppins", sans-serif; }
+  .c-main__home .c-home__app-name {
+    font-size: 1.5rem; }
+  .c-main__home .c-home__title {
+    font-size: 5rem;
+    line-height: 5rem;
+    margin: 2rem 0; }
+  .c-main__home .c-home__cta h4 {
+    font-weight: 500;
+    font-size: 1.5rem;
+    margin-bottom: 4rem; }
+  .c-main__home .c-home__cta .c-home__btn {
+    color: #fff;
+    background-color: transparent;
+    border: 1px solid #fff;
+    padding: 0.875rem 4rem;
+    border-radius: 2.5rem;
+    font-weight: bold;
+    font-size: 2rem;
+    transition: 500ms; }
+    .c-main__home .c-home__cta .c-home__btn:last-child {
+      margin-left: 0.5rem; }
+    .c-main__home .c-home__cta .c-home__btn:hover {
+      border-color: #fa4a0c;
+      background-color: #fa4a0c; }
 
 * {
   margin: 0;
