--- a/assets/styles/sass/main.scss
+++ b/assets/styles/sass/main.scss
@@ -17,3 +17,23 @@
 a {
     text-decoration: none;
 }
+
+.btn {
+    color: #fff;
+    background-color: transparent;
+    border: 1px solid #fff;
+    padding: $size * 1.75 $size * 8;
+    border-radius: $size * 5;
+    font-weight: bold;
+    font-size: $size * 4;
+    transition: 500ms;
+
+    &:last-child {
+        margin-left: $size;
+    }
+
+    &:hover {
+        border-color: $highlightColor;
+        background-color: $highlightColor;
+    }
+}
